[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/soundBoard/game3_board_sound.png" type="Texture" id=1]
[ext_resource path="res://assets/images/soundBoard/public_allow_yellow.png" type="Texture" id=2]
[ext_resource path="res://assets/images/soundBoard/public_allow_green.png" type="Texture" id=3]
[ext_resource path="res://assets/images/soundBoard/public_no_green.png" type="Texture" id=4]
[ext_resource path="res://assets/images/updated/game3_bg1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/soundBoard/public_no_yellow.png" type="Texture" id=6]
[ext_resource path="res://Sound.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Slide_down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1100 ), Vector2( 0, 24 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Slide_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ), Vector2( 0, -1100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Sound" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 963.132, 724.349 )
scale = Vector2( 0.942254, 0.942254 )
texture = ExtResource( 5 )

[node name="SoundContainer" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 976, 736 )
scale = Vector2( 1.00384, 0.998896 )

[node name="ColorRect" type="ColorRect" parent="SoundContainer"]
margin_left = -996.0
margin_top = -761.0
margin_right = 976.0
margin_bottom = 768.0
color = Color( 0.0745098, 0.0705882, 0.0705882, 0.709804 )

[node name="SoundBoard" type="Sprite" parent="SoundContainer"]
position = Vector2( 0, -1100 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SoundContainer/SoundBoard"]
anims/Slide_down = SubResource( 1 )
anims/Slide_up = SubResource( 2 )

[node name="NoSoundButton" type="Sprite" parent="SoundContainer/SoundBoard"]
position = Vector2( 0, -24 )
scale = Vector2( 1.01008, 1.01447 )

[node name="NoSoundButton" type="TextureButton" parent="SoundContainer/SoundBoard/NoSoundButton"]
margin_left = -480.0
margin_top = 78.0
margin_right = -39.0
margin_bottom = 242.0
rect_scale = Vector2( 1.00088, 1 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )

[node name="YesSoundButton" type="Sprite" parent="SoundContainer/SoundBoard"]
position = Vector2( 0, -24 )
scale = Vector2( 1, 0.989912 )

[node name="YesSoundButton" type="TextureButton" parent="SoundContainer/SoundBoard/YesSoundButton"]
margin_left = 32.0
margin_top = 78.0
margin_right = 473.0
margin_bottom = 243.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[connection signal="pressed" from="SoundContainer/SoundBoard/NoSoundButton/NoSoundButton" to="." method="_on_NoSoundButton_pressed"]
[connection signal="pressed" from="SoundContainer/SoundBoard/YesSoundButton/YesSoundButton" to="." method="_on_YesSoundButton_pressed"]
